@@ -1,3 +1,5 @@
+* Improve NodeList detection for Safari's $A function. [Garrett Smith, jddalton]
+
 * Use different tactic to sniff for Opera in order to avoid false positives in IE. [Tobie Langel, jddalton]
 
 * Optimize Function#bind and Function#bindAsEventListener to avoid using Array#concat when only the context argument is given. [kangax]
